force-app/main/default/objects/Desk_Contact_Migration__c/Desk_Contact_Migration__c.object-meta.xml
<CustomObject>
    <label>Desk Contact Migration</label>
    <nameField>
        <displayFormat>DCM-{0000000000}</displayFormat>
        <label>Desk Contact Migration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Desk Contact Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>