force-app/main/default/objects/Desk_Contact_Migration__c/fields/Access_Company_Cases__c.field-meta.xml
<CustomField>
    <fullName>Access_Company_Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Company Cases</label>
    <type>Checkbox</type>
</CustomField>