force-app/main/default/objects/Desk_Contact_Migration__c/fields/Access_Private_Portal__c.field-meta.xml
<CustomField>
    <fullName>Access_Private_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Private Portal</label>
    <type>Checkbox</type>
</CustomField>