force-app/main/default/objects/Desk_Contact_Migration__c/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <label>Background</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>