force-app/main/default/objects/Desk_Contact_Migration__c/fields/DESKSCMT_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Account_Id__c</fullName>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>