force-app/main/default/objects/Desk_Contact_Migration__c/fields/DESKSCMT_Addresses__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Addresses__c</fullName>
    <label>Addresses</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>