force-app/main/default/objects/Desk_Contact_Migration__c/fields/DESKSCMT_App_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_App_Id__c</fullName>
    <label>App Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>