force-app/main/default/objects/Desk_Contact_Migration__c/fields/DESKSCMT_Count__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Count__c</fullName>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>