force-app/main/default/objects/Desk_Contact_Migration__c/fields/DESKSCMT_Created_At_For_Audit__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Created_At_For_Audit__c</fullName>
    <label>Created At For Audit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>