force-app/main/default/objects/Desk_Contact_Migration__c/fields/DESKSCMT_Desk_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Desk_Company_Id__c</fullName>
    <label>Desk Company Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>