force-app/main/default/objects/Desk_Contact_Migration__c/fields/DESKSCMT_Email__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>