force-app/main/default/objects/Desk_Contact_Migration__c/fields/DESKSCMT_Emails__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Emails__c</fullName>
    <label>Emails</label>
    <type>TextArea</type>
</CustomField>