force-app/main/default/objects/Desk_Contact_Migration__c/fields/DESKSCMT_FirstName__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_FirstName__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>