force-app/main/default/objects/Desk_Contact_Migration__c/fields/DESKSCMT_LastName__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_LastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>