force-app/main/default/objects/Desk_Contact_Migration__c/fields/DESKSCMT_MailingStreet__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_MailingStreet__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>