force-app/main/default/objects/Desk_Contact_Migration__c/fields/DESKSCMT_Phone_Numbers__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT_Phone_Numbers__c</fullName>
    <label>Phone Numbers</label>
    <type>TextArea</type>
</CustomField>